--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,29 @@
 {
+  "scripts": {
+    "start": "webpack-dev-server --hot"
+  },
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.6.0",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.2.1",
+    "babel-loader": "^8.0.6",
+    "fork-ts-checker-webpack-plugin": "^1.5.0",
+    "html-webpack-plugin": "^3.2.0",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^16.10.2",
+    "core-js": "^3.2.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-hot-loader": "^4.12.13",
+    "regenerator-runtime": "^0.13.3"
   }
 }
