--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,9 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server --hot",
+    "typecheck": "tsc -p .",
+    "format": "prettier --write \"src/**/*.ts*\"",
+    "check-format": "prettier --check \"src/**/*.ts*\""
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
@@ -13,6 +16,7 @@
     "babel-loader": "^8.0.6",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "1.19.1",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
