--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "start": "webpack-dev-server --hot",
+    "test": "jest",
     "typecheck": "tsc -p .",
     "format": "prettier --write \"src/**/*.ts*\"",
     "check-format": "prettier --check \"src/**/*.ts*\""
@@ -11,12 +12,18 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.23",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "prettier": "1.19.1",
     "style-loader": "^1.0.0",
     "typescript": "^3.7.2",
@@ -31,5 +38,10 @@
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.13",
     "regenerator-runtime": "^0.13.3"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./src/setupTests.ts"
+    ]
   }
 }
