Set the `testPathIgnorePatterns` to avoid running tests in `dist`.
Docs for this setting can be found here:
https://jestjs.io/docs/en/configuration#testpathignorepatterns-array-string

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
   "jest": {
     "setupFilesAfterEnv": [
       "./src/setupTests.ts"
-    ]
+    ],
+    "testPathIgnorePatterns": ["/node_modules/", "/dist/"]
   }
 }
