--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
+    "@types/classnames": "^2.2.9",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.23",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.10.2",
+    "classnames": "^2.2.6",
     "core-js": "^3.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
