Add a build command.
I am looking to use `netify` to deploy this because it's something I am
used to.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "start": "webpack-dev-server --hot",
+    "build": "webpack --production",
     "test": "jest",
     "typecheck": "tsc -p .",
     "format": "prettier --write \"src/**/*.ts*\"",
